# shinkirou_package

./: README.md  pyproject.toml  setup.py
shinkirou/: module1.py  module2.py  version.py
shinkirou.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
