[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "shinkirou"
dynamic = ["version"]
description = "A fundamental Python package"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    # Add your dependencies here, e.g., "numpy", "requests"
]

[project.urls]
"Homepage" = "https://github.com/koukaze/shinkirou_package"
"Source" = "https://github.com/koukaze/shinkirou_package"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "shinkirou/version.py"
